--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,10 +8,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
     min-height: 100vh;
+    font-family: "Poppins", sans-serif;
 }
 
 a{
