--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -3,7 +3,7 @@
 }
 
 .login-input input{
-    padding: 2px;
+    padding: 8px;
     outline: none;
     border: 2px solid #c9c9c9;
     border-radius: 5px;
@@ -14,8 +14,23 @@
 }
 
 .login p span{
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: tomato;
     font-weight: 500;
     cursor: pointer;
+}
+
+@media screen and (max-width: 640px) { 
+    .login-container p{
+        font-size: 0.6rem;
+    }
+    .login p span{
+        font-size: 0.8rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .login-input input{
+        padding: 7px;
+    }  
 }
